--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "http-errors": "~1.6.3",
     "luxon": "^3.2.1",
     "mongoose": "^6.9.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^8.34.0",
